k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  labels:
    app: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
        - name: backend-api
          # The image name will be replaced by the CI/CD pipeline
          image: DOCKER_IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: acr-auth
