k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  type: LoadBalancer
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
